deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hostyourself-web
  namespace: web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - hostyourself.khazadlab.es
      secretName: hostyourself-khazadlab-es-tls
  rules:
    - host: hostyourself.khazadlab.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hostyourself-web
                port:
                  number: 80
